# cognosis

./: .gitignore  LICENSE  README.md  __init__.py  best.new.main.py  content_metadata.json  docker-compose.yml  main.new.py  main.py  new.main.py  other.main.new.py  pyproject.toml  qid.py  runtime.py  yetanother.main.py
.devcontainer/: .bashrc  devcontainer.json  setup.sh
.github/workflows/: codeql.yml
media/: image(16).png:Zone.Identifier
source/: provisioning.sh  py313_llama_client.py  pyproject.toml
source/utils/: cleanup.py  cntnt.py  complexityscalar.py
src/: __init__.py  gg.py  merkseries.py  model.py  models.py  morpho.py  pp.py  rootboot.py  stats.rtk
src/app/: README.md  __init__.py  app.py  atom.py  atoms.py  data.py  kernel.py  lg.model.py  llama.py  logic.py  model.py  sm.model.py  theory.py
src/quine/: README.md  qq.py
src/user/: __init__.py  jitnames.py  loadspec.py  usermain.py
src/utils/: cleanup.py  loadspec.py  maths.py
